fix(tui): use Math.clamp, share test fixture, fix CI integration test